--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" />
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
-<body class="backgroundcolour">
+<body class="attributes">
 <main id="content">
   <form method="get" action="#null">
     <h1>Secret Diabetes Newsletter</h1>
