--- a/index.html.bak.html
+++ b/index.html.bak.html
@@ -6,7 +6,7 @@
   <meta name="viewport" />
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
-<body>
+<body class="attributes">
 <main id="content">
   <form method="get" action="#null">
     <h1>Secret Diabetes Newsletter</h1>
@@ -16,10 +16,10 @@
     <ol>
       <li id="input-email">
         <label for="email">Email</label>
-        <input type="email" name="email" id="email" pattern="^.+@.+$" />
+        <input type="email" name="email" id="email" pattern="^.+@.+$" required />
       </li>
       <li id="input-age-verification">
-        <input type="checkbox" id="age-verification" name="age-verification" value="18" />
+        <input type="checkbox" id="age-verification" name="age-verification" value="18" required />
         <label for="age-verification">I am over 18 years old</label>
       </li>
       <li id="input-submit">
