--- a/index.html.bak.html
+++ b/index.html.bak.html
@@ -2,9 +2,9 @@
 <html lang="en" class="nojs">
 <head>
     <title>HTML Form Elements</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" />
-    <link rel="stylesheet" media="screen" href="css/screen.css" />
+    <meta charset="utf-8" >
+    <meta name="viewport" >
+    <link rel="stylesheet" media="screen" href="css/screen.css" >
 </head>
 <body class="attributes">
 <main id="content">
@@ -16,14 +16,14 @@
             <ol>
                 <li id="input-email">
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email" pattern="^.+@.+$" required />
+                    <input type="email" name="email" id="email" pattern="^.+@.+$" required >
                 </li>
                 <li id="input-age-verification">
-                    <input type="checkbox" id="age-verification" name="age-verification" value="18" required />
+                    <input type="checkbox" id="age-verification" name="age-verification" value="18" required >
                     <label for="age-verification">I am over 18 years old</label>
                 </li>
                 <li id="input-submit">
-                    <input type="submit" name="submit" id="submit" value="Subscribe" />
+                    <input type="submit" name="submit" id="submit" value="Subscribe" >
                 </li>
             </ol>
     </form>
