--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body class="attributes">
 <main id="content">
+    <div class="spacer">
+    </div>
     <form method="get" action="#null">
         <h1>Secret Diabetes Newsletter</h1>
         <p>
@@ -19,7 +21,7 @@
                     <input type="email" name="email" id="email" pattern="^.+@.+$" required >
                 </li>
                 <li id="input-age-verification">
-                    <input type="checkbox" id="age-verification" name="age-verification" value="18" required >
+                    <input type="checkbox" class="checkbox" id="age-verification" name="age-verification" value="18" required >
                     <label for="age-verification">I am over 18 years old</label>
                 </li>
                 <li id="input-submit">
