--- a/index.html.bak.html
+++ b/index.html.bak.html
@@ -19,7 +19,7 @@
                     <input type="email" name="email" id="email" pattern="^.+@.+$" required >
                 </li>
                 <li id="input-age-verification">
-                    <input type="checkbox" id="age-verification" name="age-verification" value="18" required >
+                    <input type="checkbox" class="checkbox" id="age-verification" name="age-verification" value="18" required >
                     <label for="age-verification">I am over 18 years old</label>
                 </li>
                 <li id="input-submit">
